--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,17 +15,39 @@
 </head>
 
 <body>
-  <h1>Hello, world!</h1>
-  <button type="button" class="btn btn-primary">Primary</button>
-  <button type="button" class="btn btn-secondary">Secondary</button>
-  <button type="button" class="btn btn-success">Success</button>
-  <button type="button" class="btn btn-danger">Danger</button>
-  <button type="button" class="btn btn-warning">Warning</button>
-  <button type="button" class="btn btn-info">Info</button>
-  <button type="button" class="btn btn-light">Light</button>
-  <button type="button" class="btn btn-dark">Dark</button>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">dpp.shlyopa.team</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-  <button type="button" class="btn btn-link">Link</button>
+      </div>
+    </div>
+  </nav>
+
+  <main>
+    <h1 id="main-title">Все суда</h1>
+    <div id="map-wrapper">
+
+    </div>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">MMSI</th>
+          <th scope="col">LAT</th>
+          <th scope="col">LON</th>
+          <th scope="col">Length</th>
+          <th scope="col">Width</th>
+        </tr>
+      </thead>
+      <tbody id="vtable">
+      </tbody>
+    </table>
+  </main>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
@@ -32,6 +55,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
