Таблица, выпадающий список команды

--- a/main.html
+++ b/main.html
@@ -15,20 +15,18 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">dpp.shlyopa.team</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-      </div>
-    </div>
-  </nav>
 
-  
+  <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+    <option selected>dpp.shlyopa.team</option>
+    <option value="1">Болучевских Валерия</option>
+    <option value="2">Геллер Виктория</option>
+    <option value="3">Лебедева Анна</option>
+    <option value="4">Маковецкая Влада</option>
+    <option value="5">Чернышков Максим</option>
+  </select>
+
+
   <main>
     <h1 id="main-title">Все суда</h1>
     <div id="map-wrapper">
@@ -38,14 +36,48 @@
     <table class="table">
       <thead>
         <tr>
+          <th scope="col">#</th>
           <th scope="col">MMSI</th>
-          <th scope="col">LAT</th>
-          <th scope="col">LON</th>
+          <th scope="col">Vessel Name</th>
+          <th scope="col">Call Sign</th>
           <th scope="col">Length</th>
           <th scope="col">Width</th>
+          <th scope="col">Cargo</th>
+          <th scope="col">Vessel Type</th>
+          <th scope="col">Transciever Class</th>
         </tr>
       </thead>
-      <tbody id="vtable">
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+        </tr>
+        <tr>
+          <th scope="row">10</th>
+        </tr>
       </tbody>
     </table>
   </main>
