--- a/vessel.html
+++ b/vessel.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">dpp.shlyopa.team</a>
@@ -27,34 +28,26 @@
       </div>
     </div>
   </nav>
-
-  
   <main>
+
+    <h1>Судно #123</h1>
+    <ul class="list-group">
+      <li class="list-group-item">MMSI:</li>
+      <li class="list-group-item">Vesselname:</li>
+      <li class="list-group-item">CallSign</li>
+      <li class="list-group-item">Length:</li>
+      <li class="list-group-item">Width:</li>
+      <li class="list-group-item">Cargo:</li>
+      <li class="list-group-item">VesselType:</li>
+      <li class="list-group-item">TranscieverClass:</li>
+    </ul>
+
+
     <h1 id="main-title">Все суда</h1>
     <div id="map-wrapper">
 
     </div>
-
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">MMSI</th>
-          <th scope="col">LAT</th>
-          <th scope="col">LON</th>
-          <th scope="col">Length</th>
-          <th scope="col">Width</th>
-        </tr>
-      </thead>
-      <tbody id="vtable">
-      </tbody>
-    </table>
   </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="script.js"></script>
 </body>
 
 </html>
