--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
+          <th scope="row"><a href="vessel.html">1</a></th>
         </tr>
         <tr>
           <th scope="row">2</th>
