--- a/vessel.html
+++ b/vessel.html
@@ -5,94 +5,95 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <link rel="stylesheet" href="vessel.css">
 
   <title>Hello, world!</title>
 </head>
 
 <body>
+  <div class="inner">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="main.html">dpp.shlyopa.team</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="main.html">dpp.shlyopa.team</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </div>
+      </div>
+    </nav>
+    <main>
+
+      <h1>Судно #123</h1>
+      <ul class="list-group">
+        <li class="list-group-item">MMSI:</li>
+        <li class="list-group-item">Vesselname:</li>
+        <li class="list-group-item">CallSign</li>
+        <li class="list-group-item">Length:</li>
+        <li class="list-group-item">Width:</li>
+        <li class="list-group-item">Cargo:</li>
+        <li class="list-group-item">VesselType:</li>
+        <li class="list-group-item">TranscieverClass:</li>
+      </ul>
+
+
+      <div id="map-wrapper">
 
       </div>
-    </div>
-  </nav>
-  <main>
 
-    <h1>Судно #123</h1>
-    <ul class="list-group">
-      <li class="list-group-item">MMSI:</li>
-      <li class="list-group-item">Vesselname:</li>
-      <li class="list-group-item">CallSign</li>
-      <li class="list-group-item">Length:</li>
-      <li class="list-group-item">Width:</li>
-      <li class="list-group-item">Cargo:</li>
-      <li class="list-group-item">VesselType:</li>
-      <li class="list-group-item">TranscieverClass:</li>
-    </ul>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">datetime</th>
+            <th scope="col">latitude</th>
+            <th scope="col">longitude</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+          <tr>
+            <th scope="row">1</th>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
+          </tr>
+          <tr>
+            <th scope="row">5</th>
+          </tr>
+          <tr>
+            <th scope="row">6</th>
+          </tr>
+          <tr>
+            <th scope="row">7</th>
+          </tr>
+          <tr>
+            <th scope="row">8</th>
+          </tr>
+          <tr>
+            <th scope="row">9</th>
+          </tr>
+          <tr>
+            <th scope="row">10</th>
+          </tr>
+          </tr>
+        </tbody>
 
-
-    <div id="map-wrapper">
-
-    </div>
-    
-    <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">datetime</th>
-      <th scope="col">latitude</th>
-      <th scope="col">longitude</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <tr>
-        <th scope="row">1</th>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-      </tr>
-      <tr>
-        <th scope="row">4</th>
-      </tr>
-      <tr>
-        <th scope="row">5</th>
-      </tr>
-      <tr>
-        <th scope="row">6</th>
-      </tr>
-      <tr>
-        <th scope="row">7</th>
-      </tr>
-      <tr>
-        <th scope="row">8</th>
-      </tr>
-      <tr>
-        <th scope="row">9</th>
-      </tr>
-      <tr>
-        <th scope="row">10</th>
-      </tr>
-    </tr>
-  </tbody>
-  
-</table>
-
-</main>
+      </table>
+    </main>
+  </div>
 </body>
+
 </html>
