--- a/vessel.html
+++ b/vessel.html
@@ -35,7 +35,7 @@
       <ul class="list-group">
         <li class="list-group-item">MMSI:</li>
         <li class="list-group-item">Vesselname:</li>
-        <li class="list-group-item">CallSign</li>
+        <li class="list-group-item">CallSign:</li>
         <li class="list-group-item">Length:</li>
         <li class="list-group-item">Width:</li>
         <li class="list-group-item">Cargo:</li>
