--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+  <div class="inner">
 
   <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
     <option selected>dpp.shlyopa.team</option>
@@ -88,5 +88,5 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="script.js"></script>
 </body>
-
+</div>
 </html>
