--- a/vessel.html
+++ b/vessel.html
@@ -32,16 +32,34 @@
     <main>
 
       <h1>Судно #123</h1>
-      <ul class="list-group">
-        <li class="list-group-item">MMSI:</li>
-        <li class="list-group-item">Vesselname:</li>
-        <li class="list-group-item">CallSign:</li>
-        <li class="list-group-item">Length:</li>
-        <li class="list-group-item">Width:</li>
-        <li class="list-group-item">Cargo:</li>
-        <li class="list-group-item">VesselType:</li>
-        <li class="list-group-item">TranscieverClass:</li>
-      </ul>
+      <table class="table table-borderless">
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
+          </tr>
+          <tr>
+            <th scope="row">5</th>
+          </tr>
+          <tr>
+            <th scope="row">6</th>
+          </tr>
+          <tr>
+            <th scope="row">7</th>
+          </tr>
+          <tr>
+            <th scope="row">8</th>
+          </tr>
+        </tbody>
+      </table>
 
 
       <div id="map-wrapper">
