--- a/vessel.html
+++ b/vessel.html
@@ -35,28 +35,28 @@
       <table class="table table-borderless">
         <tbody>
           <tr>
-            <th scope="row">1</th>
+            <th scope="row">MMSI:</th>
           </tr>
           <tr>
-            <th scope="row">2</th>
+            <th scope="row">VesselName:</th>
           </tr>
           <tr>
-            <th scope="row">3</th>
+            <th scope="row">CallSign:</th>
           </tr>
           <tr>
-            <th scope="row">4</th>
+            <th scope="row">Length:</th>
           </tr>
           <tr>
-            <th scope="row">5</th>
+            <th scope="row">Width:</th>
           </tr>
           <tr>
-            <th scope="row">6</th>
+            <th scope="row">Cargo:</th>
           </tr>
           <tr>
-            <th scope="row">7</th>
+            <th scope="row">VesselType:</th>
           </tr>
           <tr>
-            <th scope="row">8</th>
+            <th scope="row">TransceverClass:</th>
           </tr>
         </tbody>
       </table>
